# Scharsch-Bot-Velocity

./: .gitmodules  build.gradle.kts  pom.xml  settings.gradle.kts
core/: Cargo.toml  lib.rs
core/src/: lib.rs  logger.rs  util.rs
rust/: Cargo.toml
rust/src/: jni_utils.rs  lib.rs
rust/src/config/: config_format.rs  load.rs  mod.rs
rust/src/events/: handler.rs
rust/src/websocket/: websocket.rs
src/main/java/de/scharschbot/velocity/plugin/: Events.kt  Plugin.kt
src/main/kotlin/de/scharschbot/velocity/plugin/: Events.kt  Plugin.kt
src/main/resources/: velocity-plugin.json
